syntax = "proto3";
package go.micro.service.backupAgent;
option go_package="./;EsBak";


service  EsService {
  rpc TaskAdd(EsBakTaskADDInput)  returns (EsOneMessage) {}
  rpc TaskDelete(EsTaskIDInput) returns (EsOneMessage) {}
  rpc TaskUpdate(EsBakTaskUpdateInput) returns (EsOneMessage) {}
  rpc GetTaskList(EsTaskListInput) returns (EsTaskListOutPut) {}
  rpc GetTaskDetail(EsTaskIDInput) returns(EsTaskDetailOutPut) {}
}

message EsBakTaskADDInput {
 string EsHost =1 ;
 string EsUser =2;
 string EsPassword = 3;
 string BackupCycle =4;
 int64 KeepNumber =5;
}

message EsBakTaskUpdateInput {
  int64 ID = 9;
  string EsHost =1 ;
  string EsUser =2;
  string EsPassword = 3;
  string BackupCycle =4;
  int64 KeepNumber =5;
}


message EsTaskIDInput {
  int64 ID = 1;
}

message EsOneMessage {
  string Message  =1;
  bool OK =2;
}

message EsTaskListInput {
  string Info =1 ;
  int64 PageNo =2;
  int64 PageSize =3 ;
}


message EsTaskListOutPut {
  int64 Total =1;
  repeated EsTaskListOutPutItem esTaskListOutPutItem =2;
}

message EsTaskListOutPutItem {
  int64 ID = 1;
  string EsHost =2 ;
  string BackupCycle =5;
  int64 KeepNumber =6;
  bool Status =7;
  string CreateAt =8;
}

message EsTaskDetailOutPut {
    EsTaskInfo esTaskInfo =1;
}


message EsTaskInfo {
  string EsHost =1 ;
  string EsUser =2;
  string EsPassword = 3;
  string BackupCycle =4;
  int64 KeepNumber =5;
  bool Status =7;
  string CreateAt =8;
}